<resources>
  <string name="app_name">NFood Driver</string>
  <string name="mapbox_access_token">pk.eyJ1IjoibmdxdW9jaHV5ZGwyMyIsImEiOiJja2o4ODJ6OXIwdWVwMnlwNWxwYzMxcGRnIn0.DKCIKUuCwHu7aGNulakUCw</string>
  <string name="decline">Decline</string>
  <string name="accept">Accept</string>
  <string name="food_delivery">Food Delivery</string>
  <string name="fee">Fee</string>
  <string name="price">Price</string>
  <string name="call">Call</string>
  <string name="see_list_food">See List Food</string>
  <string name="swipe_this_button_when_ready_to_the_delivery_food">Swipe this button when ready to the delivery food</string>
  <string name="the_order_is_almost_complete">The order is almost complete</string>
  <string name="take_order">Take Order</string>
  <string name="order_id">Order Id</string>
  <string name="check_that_the_dishes_are_correct">Check that the dishes are correct</string>
  <string name="if_the_dishes_are_corrected_then_confirm_take_order">If the dishes are corrected then confirm take order</string>
  <string name="confirm_take_order">Confirm Take Order</string>
  <string name="to_do_this_press_the_button_please_make_sure_the_image_is_clear">To do this press the button. Please make sure the image is clear</string>
  <string name="again">Again</string>
  <string name="take_photo_order">Take Photo Order</string>
  <string name="next">Next</string>
  <string name="confirm">Confirm</string>
  <string name="subtotal">Subtotal</string>
  <string name="ship_fee">Ship fee</string>
  <string name="total">Total</string>
  <string name="i_arrived">I arrived</string>
  <string name="i_went_to_the_restaurant">I went to the restaurant</string>
  <string name="delivery_for_customer">Delivery For Customer</string>
  <string name="order_by">Order by</string>
  <string name="cancel_order">Cancel Order</string>

  <string name="more">More</string>
  <string name="view_profile">View Profile</string>
  <string name="sign_out">Sign Out</string>
  <string name="settings">Settings</string>
  <string name="earnings">Earnings</string>
  <string name="trip_history">Trip History</string>
  <string name="last_trip">Last Trip</string>
  <string name="driver_checklist">Driver Checklist</string>
  <string name="check_out_what_is_needed_to_start_a_trip">Check out what is needed to start a trip</string>
  <string name="okay">Okay</string>
  <string name="phone_mount">Phone Mount</string>
  <string name="food_bag">Food Bag</string>
  <string name="uniform">Uniform</string>
  <string name="phone_charger">Phone Charger</string>
  <string name="retry">Retry</string>
  <string name="check_your_wifi_connection_or_cellular_data_and_try_again">Check your WiFi connection or cellular data and try again.</string>
  <string name="you_seem_to_be_offline">You seem to be offline</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="rated">Rated</string>
  <string name="trips">Trips</string>
  <string name="years">Years</string>
  <string name="profile">Profile</string>
  <string name="see_all">See All</string>
  <string name="rider_compliment">Rider Compliment</string>
  <string name="these_are_your_complements">These are your complements</string>
  <string name="customer_s_review">Customer\'s review</string>
  <string name="notification">Notification</string>
  <string name="notification_setting">Notification Settings</string>
  <string name="push_notifications_subtitle">Choose with push notifications to receive on your phone</string>
  <string name="language">Language</string>
  <string name="language_setting">Language Settings</string>
  <string name="language_subtitle">Set up language for your app</string>
  <string name="full_name">Full name</string>
  <string name="nguyen_van_a">Nguyễn Văn A</string>
  <string name="email">Email</string>
  <string name="nguyenvana_gmail_com">nguyenvana@gmail.com</string>
  <string name="phone_number">Phone number</string>
  <string name="save_change">Save Change</string>

  <string name="welcome_to_nfood_driver">Welcome to NFood Driver</string>
  <string name="let_s_log_into_your_driver_account_go_online_and_start_taking_orders">Let\'s log into your driver account, go online, and start taking orders</string>
  <string name="sign_up">Sign up</string>
  <string name="sign_in">Sign in</string>
  <string name="by_logging_in_or_registering_i_agree_to_our_terms_of_service_and_privacy_policy">By logging in or registering, I agree to our Terms of Service and Privacy Policy</string>
  <string name="user_name_or_email">User name or email*</string>
  <string name="enter_your_registered_email_or_phone_number_to_sign_in">Enter your registered email or phone number to sign in</string>
  <string name="password">Password*</string>
  <string name="holder_password">*******</string>
  <string name="holder_otp">******</string>


  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="forgot_password">Forgot Password</string>
  <string name="forgot_password_subtitle">Enter your email address and we\'ll send you a link to reset your password</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="otp_code_sent">OTP code sent !</string>
  <string name="resend_code">RESEND CODE</string>
  <string name="don_t_receive_the_otp">Don\'t receive the OTP?</string>
  <string name="reset_password">Reset Password</string>
  <string name="reset_password_subtitle">Set the new password for your account so you can login and access all the features.</string>
  <string name="new_password">New Password*</string>
  <string name="confirm_new_password">Confirm New Password*</string>
  <string name="auto_receive_trip">Auto Receive Trip</string>
  <string name="turn_off">Turn Off</string>
  <string name="status_title_online">You are online</string>
  <string name="status_subtitle_online">Go online to start accepting trips.</string>
  <string name="status_title_offline">You are offline !</string>
  <string name="status_subtitle_offline">Go offline to stop receive trips.</string>
  <string name="turn_on">Turn On</string>
  <string name="money_earned">Money earned</string>
  <string name="hours_online">Hours Online</string>
  <string name="total_distance">Total Distance</string>
  <string name="total_trip">Total Trip</string>
  <string name="total_trips">Total Trips</string>
  <string name="trips_cancelled">Trips Cancelled</string>
  <string name="document_management">Document Management</string>
  <string name="add_vehical">Add Vehical</string>
  <string name="driver_s_license">Driver\'s License</string>
  <string name="get_your_drivers_licence">1. Get your Driver\'s Licence</string>
  <string name="make_sure_the_entire_image_is_in_frame">2. Make sure the entire image is in frame</string>
  <string name="take_a_photo">3. Take a Photo</string>
  <string name="upload_the_photo">4. Upload the Photo</string>
  <string name="take_photo">Take Photo</string>
  <string name="content_text">Ready to receive trip</string>
  <string name="content_title">You Are Online</string>
  <string name="try_again">Try Again</string>
  <string name="connection_failed">Connection Failed !</string>
  <string name="could_not_connect_to_the_server_please_check_and_try_again">Could not connect to the server, Please check and try again</string>
  <string name="trip_settings">Trip Settings</string>
  <string name="set_up_for_the_best_trip_experience">Set up for the best trip experience</string>
  <string name="navigation">Navigation</string>
  <string name="setup_navigation">Setup Navigation</string>
  <string name="select_service_navigation">Select service navigation</string>
  <string name="receive_trip">Receive Trip</string>
  <string name="automatically_accepts_the_trip">Automatically accepts the trip</string>
  <string name="nfood_navigation">NFood Navigation</string>
  <string name="google_map">Google Map</string>
  <string name="upload_photo">Upload Photo</string>
  <string name="recommended_stay_in_this_app">Recommended : Stay in this app</string>
  <string name="launches_in_separate_app">Launches in separate app</string>
  <string name="choose_navigation_app">Choose Navigation App</string>
  <string name="navigation_settings">Navigation Settings</string>
  <string name="navigation_voice">Navigation Voice</string>
  <string name="listen_to_voice_directions_from_the_device">Listen to voice directions from the device</string>
  <string name="helps_center">Helps Center</string>
  <string name="support_center">Support Center</string>
  <string name="call_us">Call Us</string>
  <string name="contract_us">Contract us</string>
  <string name="setup_sound">Setup Sound</string>
  <string name="incoming_trip_sound">Incoming Trip Sound</string>
  <string name="pick_an_alert_sound_for_incoming_trips">Pick an alert sound for incoming trips</string>
  <string name="select_sound">Select Sound</string>
  <string name="setup_incoming_sound">Setup Incoming Sound</string>
  <string name="points">Points</string>
  <string name="payment_scheduled_for_jan_04">Payment scheduled for Jan 04</string>
  <string name="cash_out">Cash out</string>
  <string name="rewards">Rewards</string>
  <string name="see_my_earnings">See My Earnings</string>
  <string name="payment">Payment</string>
  <string name="detail_rewards">Detail Rewards</string>
</resources>
