<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Ui.Authentication.SignInFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/icon_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="10dp"
          android:text="@string/sign_in"
          android:textColor="@color/titleTextColor"
          android:textSize="25sp"
          android:textStyle="bold" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/enter_your_registered_email_or_phone_number_to_sign_in"
          android:textColor="@color/textColorPrimary"
          android:textSize="17sp" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/user_name_or_email"
          android:textColor="@color/titleTextColor"
          android:textSize="16sp" />

      <EditText
          android:id="@+id/enterEmail"
          android:layout_width="match_parent"
          android:layout_height="45dp"
          android:layout_marginTop="10dp"
          android:layout_weight="1"
          android:background="@drawable/layout_border_item_size5"
          android:backgroundTint="@color/whitesmoke"
          android:hint="@string/nguyenvana_gmail_com"
          android:paddingStart="10dp"
          android:textColor="@color/gray"
          tools:ignore="RtlSymmetry" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/password"
          android:textColor="@color/titleTextColor"
          android:textSize="16sp" />

      <EditText
          android:id="@+id/enterPassword"
          android:layout_width="match_parent"
          android:layout_height="45dp"
          android:layout_marginTop="10dp"
          android:layout_weight="1"
          android:background="@drawable/layout_border_item_size5"
          android:backgroundTint="@color/whitesmoke"
          android:hint="@string/holder_password"
          android:inputType="numberPassword"
          android:paddingStart="10dp"
          android:textColor="@color/gray"
          tools:ignore="RtlSymmetry" />

      <TextView
          android:id="@+id/forgotPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:gravity="end"
          android:text="@string/forgot_password"
          android:textColor="@color/green"
          android:textSize="17sp" />
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>