<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Document.DocumentManagement">

  <include
      android:id="@+id/header"
      layout="@layout/layout_toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginBottom="10dp"
      android:orientation="vertical"
      android:padding="10dp"
      app:layout_constraintBottom_toTopOf="@id/uploadPhotoButton"
      app:layout_constraintTop_toBottomOf="@id/header">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/driver_s_license"
        android:textColor="@color/titleTextColor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/get_your_drivers_licence"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/make_sure_the_entire_image_is_in_frame"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/take_a_photo"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/upload_the_photo"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="175dp"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="5dp">

      <ImageView
          android:id="@+id/driverLicenseImage"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:src="@drawable/illustration_camera_placeholder" />
    </androidx.cardview.widget.CardView>
  </LinearLayout>

  <Button
      android:id="@+id/uploadPhotoButton"
      style="@style/ButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:text="@string/upload_photo"
      app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>