<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/childFragmentContainer"
    android:background="@color/white"
    tools:context=".Ui.Authentication.WelcomeFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="bottom"
      android:orientation="vertical"
      android:paddingHorizontal="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:cropToPadding="true"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_nfood_driver"
        android:textColor="@color/titleTextColor"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/let_s_log_into_your_driver_account_go_online_and_start_taking_orders"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

      <Button
          android:id="@+id/signUpButton"
          android:layout_width="0dp"
          android:layout_height="45dp"
          android:layout_marginEnd="5dp"
          android:layout_weight="1"
          android:background="@drawable/layout_border_rectangle_size5"
          android:text="@string/sign_up"
          android:textColor="@color/green"
          android:textStyle="bold" />

      <Button
          android:id="@+id/signInButton"
          android:layout_width="0dp"
          android:layout_height="45dp"
          android:layout_marginStart="5dp"
          android:layout_weight="1"
          android:background="@drawable/layout_border_item_size5"
          android:backgroundTint="@color/green"
          android:clipChildren="false"
          android:text="@string/sign_in"
          android:textColor="@color/white"
          android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/termOfServiceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/by_logging_in_or_registering_i_agree_to_our_terms_of_service_and_privacy_policy"
        android:textColor="@color/textColorPrimary"
        android:textSize="15sp" />
  </LinearLayout>


</FrameLayout>