<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Ui.Authentication.ForgotPasswordFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/icon_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="10dp"
          android:text="@string/forgot_password"
          android:textColor="@color/titleTextColor"
          android:textSize="22sp"
          android:textStyle="bold" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/forgot_password_subtitle"
          android:textColor="@color/textColorPrimary"
          android:textSize="16sp" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/email"
          android:textColor="@color/titleTextColor"
          android:textSize="16sp" />

      <EditText
          android:id="@+id/enterEmail"
          android:layout_width="match_parent"
          android:layout_height="45dp"
          android:layout_marginTop="10dp"
          android:background="@drawable/layout_border_item_size10"
          android:backgroundTint="@color/whitesmoke"
          android:hint="@string/nguyenvana_gmail_com"
          android:inputType="text"
          android:paddingStart="10dp"
          tools:ignore="RtlSymmetry,TextFields" />
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>