<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="300dp"
      android:src="@drawable/illustration_connection_error" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/connection_failed"
      android:textColor="@color/titleTextColor"
      android:textSize="25sp"
      android:textStyle="bold" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:padding="10dp"
      android:text="@string/could_not_connect_to_the_server_please_check_and_try_again"
      android:textColor="@color/textColorPrimary"
      android:textSize="18sp" />

  <Button
      android:id="@+id/tryAgainButton"
      style="@style/ButtonStyle"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="10dp"
      android:text="@string/try_again"
      android:textAllCaps="true"
      android:textSize="14sp" />
</LinearLayout>