<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/illustration_no_internet" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/you_seem_to_be_offline"
        android:textColor="@color/titleTextColor"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_your_wifi_connection_or_cellular_data_and_try_again"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal">

      <Button
          android:id="@+id/retryButton"
          android:layout_width="0dp"
          android:layout_height="45dp"
          android:layout_marginEnd="5dp"
          android:layout_weight="1"
          android:background="@drawable/layout_border_rectangle_size5"
          android:text="@string/retry"
          android:textSize="16.5sp"
          android:textAllCaps="false"
          android:textColor="@color/green"
          android:textStyle="bold" />

      <Button
          android:id="@+id/settingButton"
          style="@style/ButtonStyle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_weight="1"
          android:text="@string/settings" />
    </LinearLayout>
  </LinearLayout>
</LinearLayout>